test_suite5/ALAN/test_suite/alan-2022-examples/failing/004710_mutation.alan
source c begin leave K5(function) end
